Minor changes in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,16 @@
     <string name="no_button">Нет</string>
     <string name="result_button">Рекомендации</string>
     <string name="back_button">Назад</string>
-    <string name="app_name_title">Амбулаторная помощь при COVID19</string>
+    <string name="app_name_title1">Программа поддержки принятия решений</string>
+    <string name="app_name_title2">\"Амбулаторная помощь при COVID19\"</string>
 
     <!--  About fragment  -->
     <string name="about_title">О приложении</string>
-    <string name="about_name">Название: Амбулаторная помощь при COVID19</string>
-    <string name="about_version">Версия: v1.1</string>
+    <string name="about_name1">Программа поддержки принятия решений</string>
+    <string name="about_name2">\"Амбулаторная помощь при COVID19\"</string>
+    <string name="authors"><b>Автор проекта:</b> Бонцевич Р.А. - к.м.н., доцент, клин. фармаколог НИУ "Белгородский гос. университет", каф. фармакологии и клинической фармакологии (<a href = "mailto:bontsevich@bsu.edu.ru">bontsevich@bsu.edu.ru</a>)</string>
+    <string name="developers"><b>Разработчики:</b> Бегенджев Довлет Батырович, Щепилов Юрий Васильевич - бакалавры каф. МиПОИС, НИУ "Белгородский гос. университет"</string>
+    <string name="about_version"><b>Версия:</b> 1.5 от 11.02.2022 на основании ВМР-№14 МЗ РФ</string>
 
     <!--  Instructions fragment  -->
     <string name="instructions_title">Инструкция</string>
